Making added points interpolate in original path.

--- a/matrix.html
+++ b/matrix.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <script type="text/javascript" src="/js/paper-full.min.js"></script>
-    <script type="text/paperscript" src="/js/svg.js" canvas="svgStretch"></script>
+    <script type="text/paperscript" src="/js/matrix.js" canvas="matrix"></script>
     <link rel="stylesheet" href="/style.css">
 </head>
 
