--- a/matrix.html
+++ b/matrix.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
     <script type="text/javascript" src="/js/paper-full.min.js"></script>
+    <script type="text/javascript" src="https://unpkg.com/popper.js"></script>
     <script type="text/paperscript" src="/js/matrix.js" canvas="matrix"></script>
     <link rel="stylesheet" href="/style.css">
 </head>
@@ -13,6 +14,8 @@
     <!-- {%- include header.html -%} -->    
     <button id="computing">Computing</button>
     <button id="design">Design</button>
+    <div class="circle" id="circle1">CIRCLE</div>
+    <div id="pop">TEST</div>
     <canvas id="matrix" resize style="z-index: -1"></canvas>
 </body>
 </html>
