--- a/matrix.html
+++ b/matrix.html
@@ -15,7 +15,7 @@
     <button id="computing">Computing</button>
     <button id="design">Design</button>
     <div class="circle" id="circle1">CIRCLE</div>
-    <div id="pop">TEST</div>
+    <div id="pop" class="popper">TEST</div>
     <canvas id="matrix" resize style="z-index: -1"></canvas>
 </body>
 </html>
